# portfolio

./: .dockerignore  .gitignore  .yarnrc.yml  Dockerfile  README.md  Session.vim  nginx.conf  package.json  vue.config.js  webgl.wasm
.do/: app.yaml
frontend/: package.json  vue.config.js
frontend/src/: App.vue  config.js  main.js  playground-worker.js  style.scss
frontend/src/components/: page.vue  playground.vue  project-icon.vue  project.vue
frontend/src/components/icons/: deno.vue  godot.vue  javascript.vue  rust.vue
frontend/src/pages/: home.vue
src/: App.vue  index.js  main.js  style.scss  webgl.wasm
src/components/: app.js  page.vue  playground.vue
src/components/chaos/: equations.js  index.js  math.js  style.css
src/components/flocking/: boid.js  index.js  quadtree.js  style.css
src/components/gol/: continuer.js  index.js
src/components/icon/: converter.js  index.js
src/components/navbar/: index.js  style.css
src/components/navbar-button/: index.js  style.css
src/routes/home/: index.js  style.css
src/style/: index.css
src/utils/: math.js
srclib/: package.json
webgl/: Cargo.toml  README.md  package.json
webgl/src/: gl_setup.rs  lib.rs  quadtree.rs
webgl/src/programs/: mod.rs  rectangle.rs
webgl/src/rendering/: color_2d.rs  mod.rs  rectangle.rs  triangle.rs
webgl/src/shaders/: simple.rs
webgl/src/shaders/vert/: color_2d.rs
webgl/src/simulations/: falling_sand.rs  flock.rs  gol.rs  mod.rs  simulation.rs
webgl/src/utils/: coordinate_encoder.rs  mod.rs
webgl/static/: index.html
